--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@ helm install my-release mojaloop/mojaloop
     </div>
     <p>Browse the <a href="mojaloop/repo/index.yaml">Helm repository index</a></p>
     <p>View available <a href="mojaloop/VERSIONS.md">versions documentation</a></p>
+    <div class="versions">
+        <h2>Latest Versions</h2>
+        <pre id="latest-versions">Loading...</pre>
+    </div>
 </body>
 </html>
